@@ -5,105 +5,130 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
-import group_05.ase.neo4j_data_access.Entity.Tour.CreateTourRequestDTO;
-import group_05.ase.neo4j_data_access.Entity.Tour.MatchRequest;
-import group_05.ase.neo4j_data_access.Entity.Tour.TourDTO;
-import group_05.ase.neo4j_data_access.Entity.Tour.TourObject;
+import com.graphhopper.jsprit.core.algorithm.VehicleRoutingAlgorithm;
+import com.graphhopper.jsprit.core.algorithm.box.Jsprit;
+import com.graphhopper.jsprit.core.problem.Location;
+import com.graphhopper.jsprit.core.problem.VehicleRoutingProblem;
+import com.graphhopper.jsprit.core.problem.solution.VehicleRoutingProblemSolution;
+import com.graphhopper.jsprit.core.problem.solution.route.VehicleRoute;
+import com.graphhopper.jsprit.core.problem.vehicle.VehicleImpl;
+import com.graphhopper.jsprit.core.problem.vehicle.VehicleTypeImpl;
+import group_05.ase.neo4j_data_access.Client.QdrantClient;
+import group_05.ase.neo4j_data_access.Client.UserDBClient;
+import group_05.ase.neo4j_data_access.Entity.Tour.*;
 import group_05.ase.neo4j_data_access.Entity.ViennaHistoryWikiBuildingObject;
 import group_05.ase.neo4j_data_access.Service.Interface.ITourService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.data.neo4j.types.GeographicPoint2d;
-import org.springframework.http.*;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 import java.time.Instant;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class TourService implements ITourService {
 
-    private HistoricBuildingService historicBuildingService;
-    private HistoricPersonService historicPersonService;
-    private HistoricEventService historicEventService;
+    Logger logger = LoggerFactory.getLogger(TourService.class);
 
-    public TourService(HistoricBuildingService historicBuildingService, HistoricPersonService historicPersonService, HistoricEventService historicEventService) {
+    private final HistoricBuildingService historicBuildingService;
+    private final UserDBClient userDBClient;
+    private final QdrantClient qdrantClient;
+
+    public TourService(HistoricBuildingService historicBuildingService, UserDBClient userDBClient, QdrantClient qdrantClient) {
         this.historicBuildingService = historicBuildingService;
-        this.historicPersonService = historicPersonService;
-        this.historicEventService = historicEventService;
+        this.userDBClient = userDBClient;
+        this.qdrantClient = qdrantClient;
         this.mapper.registerModule(new Jdk8Module());
     }
 
     private final ObjectMapper mapper = new ObjectMapper();
-    private final RestTemplate restTemplate = new RestTemplate();
-    private final String USERDB_URL = "http://localhost:8090/";
-    private final String QDRANT_URL = "http://localhost:8081/";
     private final Integer MAX_ROUTES = 10;
-
+    private final Integer MAX_NEARBY_BUILDINGS = 30;
 
     @Override
     public List<TourDTO> createTours(CreateTourRequestDTO dto) {
 
-        //HTTP Request to User Interst DB
-        List<String> interest_ids = getInterestsFromDB(dto.getUserId());
-        System.out.println(interest_ids);
-
-        //HTTP Request to QDRANT for related articles
-
-        List<Integer> buildings_wikidata_ids = getEntititesFromQdrant(interest_ids, "WienGeschichteWikiBuildings");
-        List<Integer> events_wikidata_ids = getEntititesFromQdrant(interest_ids, "WienGeschichteWikiEvents");
-        List<Integer> persons_wikidata_ids = getEntititesFromQdrant(interest_ids, "WienGeschichteWikiPersons");
-
-        Set<Integer> related_building_wikidata_ids = new HashSet<>();
-        for(Integer event_id: events_wikidata_ids){
-            this.historicEventService.getAllLinkedHistoricBuildingsById(event_id).forEach(event -> related_building_wikidata_ids.add(event.getViennaHistoryWikiId()));
-        }
-
-        for(Integer event_id: persons_wikidata_ids){
-            this.historicPersonService.getAllLinkedHistoricBuildingsById(event_id).forEach(person -> related_building_wikidata_ids.add(person.getViennaHistoryWikiId()));
-        }
-
-
-        System.out.println("Direct buildungs size: " + buildings_wikidata_ids.size());
-        System.out.println("Realted buildings size: " + related_building_wikidata_ids.size());
-
-        buildings_wikidata_ids.addAll(related_building_wikidata_ids);
-        buildings_wikidata_ids = buildings_wikidata_ids.stream().distinct().toList();
+        List<Integer> interests = getInterestsFromDB(dto.getUserId());
+        //List<Integer> interests = List.of(2,3,4,5,6,7,10,12);
+        List<Integer> buildingIds = getBuildingEntititesFromQdrant(interests.stream().map(Object::toString).toList());
+        logger.info("Qdrant Building list size: {}", buildingIds.size());
 
         List<GeographicPoint2d> stops = new ArrayList<>();
-
-        if(dto.getStart_lat() != 0.0 && dto.getStart_lng() != 0.0) {
-            stops.add(new GeographicPoint2d(dto.getStart_lat(), dto.getStart_lng()));
-        }
-
         Map<GeographicPoint2d, Integer> building_dict = new HashMap<>();
 
-        for(Integer building_id : buildings_wikidata_ids) {
-            ViennaHistoryWikiBuildingObject building = historicBuildingService.getBuildingById(building_id);
-            System.out.println(building);
-            if(building.getLatitude().isEmpty() || building.getLongitude().isEmpty() ) {
+        for(Integer stopId: buildingIds) {
+            ViennaHistoryWikiBuildingObject viennaHistoryWikiBuildingObject = historicBuildingService.getBuildingById(stopId);
+            if(viennaHistoryWikiBuildingObject.getLatitude().isEmpty() || viennaHistoryWikiBuildingObject.getLongitude().isEmpty() ) {
                 continue;
             }
-            GeographicPoint2d stop = new GeographicPoint2d(building.getLatitude().get(), building.getLongitude().get());
-            building_dict.put(stop, building_id);
-            System.out.println(stop);
+            GeographicPoint2d stop = new GeographicPoint2d(viennaHistoryWikiBuildingObject.getLatitude().get(), viennaHistoryWikiBuildingObject.getLongitude().get());
+            building_dict.put(stop, viennaHistoryWikiBuildingObject.getViennaHistoryWikiId());
             stops.add(stop);
         }
+        logger.info("Stops array size: {}", stops.size());
 
-        if(dto.getPredefined_stops() != null && dto.getPredefined_stops().size() > 0) {
-            dto.getPredefined_stops().forEach(stop -> stops.add(new GeographicPoint2d(stop.getLatitude().get(), stop.getLongitude().get())));
 
-        }
-        if(dto.getEnd_lat() != 0.0 && dto.getEnd_lng() != 0.0) {
-            stops.add(new GeographicPoint2d(dto.getEnd_lat(), dto.getEnd_lng()));
-        }
+        //assert that all predefined stops are in the stops list, should be anyway since qdrant returns all buildings
+        dto.getPredefinedStops().forEach(stop -> {assert stops.contains(new GeographicPoint2d(stop.getLatitude().get(), stop.getLongitude().get()));});
+
+
+        Optional<GeographicPoint2d> startOptional;
+        Optional<GeographicPoint2d> endOptional;
+        if(dto.getStart_lat() != 0.0 && dto.getStart_lng() != 0.0) {
+            startOptional = Optional.of(new GeographicPoint2d(dto.getStart_lat(), dto.getStart_lng()));
+        } else { startOptional = Optional.empty(); }
+        if(dto.getEnd_lng() != 0.0 && dto.getEnd_lat() != 0.0) {
+            endOptional = Optional.of(new GeographicPoint2d(dto.getEnd_lat(), dto.getEnd_lng()));
+        } else { endOptional = Optional.empty(); }
+
+        assert(startOptional.isPresent());
+
+        //Prepend start
+        startOptional.ifPresent(geographicPoint2d -> stops.add(0, geographicPoint2d));
+        //Append end
+        endOptional.ifPresent(stops::add);
+
 
         List<List<Float>> distanceMatrix = getMetricMatrix(stops, "distance");
-        System.out.println("Distance Matrix: " + distanceMatrix);
+        if(distanceMatrix == null) {
+            logger.error("Distance matrix is null! Return null");
+            return null;
+        }
 
-        List<List<GeographicPoint2d>> routes = findRoutesBFS(stops, distanceMatrix, dto.getMinDistance(), dto.getMaxDistance(), dto.getMinIntermediateStops(), MAX_ROUTES);
-        List<TourObject> tours = routes.stream().map(route -> buildTourObject(route, dto.getUserId(), building_dict)).toList();
+        List<GeographicPoint2d> mandatoryStops = dto.getPredefinedStops().stream().map(stop -> new GeographicPoint2d(stop.getLatitude().get(), stop.getLongitude().get())).toList();
 
-        return tours.stream().map(this::tourObjectToTourDTO).toList();
+
+        //First: Try with breadth first search
+        List<TourObject> foundTours = findRoutesBFS(startOptional, endOptional, mandatoryStops, stops, distanceMatrix, dto, MAX_ROUTES, building_dict);
+        if(foundTours.isEmpty()){
+            logger.error("No tours found with BFS! Trying with Graphhopper Logic...");
+        } else {
+            logger.info("Found {} tours with BFS!", foundTours.size());
+            return foundTours.stream().map(this::tourObjectToTourDTO).collect(Collectors.toList());
+        }
+
+        List<Integer> foundTour = findRoutesGraphhopper(distanceMatrix, dto.getNumStops(), endOptional.isPresent(), dto.getMaxDistance(), dto.getMaxBudget(), stops, building_dict, dto);
+        logger.info("Found {} tours with Graphhopper!", foundTour.size());
+        if(!foundTour.isEmpty()){
+            logger.info("Found tour with Graphhopper:{}", foundTour);
+            List<GeographicPoint2d> stopsNew = new ArrayList<>();
+            foundTour.forEach(stop -> stopsNew.add(stops.get(stop)));
+            double tourPrice = getTotalPriceForTour(foundTour, stops, building_dict, dto);
+            Map<Integer, List<PriceDTO>> pricePerStop = getPricePerStop(foundTour, stops, building_dict, dto);
+            TourObject tourObject = buildTourObject(stopsNew, dto.getUserId(), building_dict, tourPrice, pricePerStop);
+            return List.of(tourObjectToTourDTO(tourObject));
+        } else{
+            logger.error("No tours found with Graphhopper!");
+            return List.of();
+        }
     }
 
     private TourDTO tourObjectToTourDTO(TourObject tourObject) {
@@ -117,16 +142,18 @@ public class TourService implements ITourService {
         dto.setEnd_lng(tourObject.getEndLng());
         dto.setDistance(tourObject.getDistance());
         dto.setDurationEstimate(tourObject.getDurationEstimate());
+        dto.setTourPrice(tourObject.getTourPrice());
         try{
             dto.setStops(mapper.writeValueAsString(tourObject.getStops()));
+            dto.setPricePerStop(mapper.writeValueAsString(tourObject.getPricePerStop()));
         } catch (JsonProcessingException e) {
-            System.out.println("Could not convert stops array to JSON string: " + e.getMessage());
+            logger.error("Could not convert stops array/price per stop to JSON string: {}", e.getMessage());
         }
         return dto;
     }
 
 
-    private TourObject buildTourObject(List<GeographicPoint2d> stops, String userId, Map<GeographicPoint2d, Integer> building_dict) {
+    private TourObject buildTourObject(List<GeographicPoint2d> stops, String userId, Map<GeographicPoint2d, Integer> building_dict, Double tourPrice, Map<Integer, List<PriceDTO>> pricePerStop) {
         TourObject tourObject = new TourObject();
         tourObject.setStartLng(stops.get(0).getLongitude());
         tourObject.setStartLat(stops.get(0).getLatitude());
@@ -146,32 +173,229 @@ public class TourService implements ITourService {
         Map<String, Double> durations = getLengthDurationOfTour(tourObject);
         tourObject.setDistance(durations.get("distance"));
         tourObject.setDurationEstimate(durations.get("duration"));
+        tourObject.setTourPrice(tourPrice);
+        tourObject.setPricePerStop(pricePerStop);
 
         return tourObject;
     }
 
+    private List<Integer> findRoutesGraphhopper(List<List<Float>> distanceMatrix,
+                                                int numberOfStops,
+                                                boolean stopDefined,
+                                                double maxDistance,
+                                                double maxBudget,
+                                                List<GeographicPoint2d> stops,
+                                                Map<GeographicPoint2d, Integer> building_dict,
+                                                CreateTourRequestDTO dto) {
+        double[][] distanceMatrice = new double[distanceMatrix.size()][distanceMatrix.get(0).size()];
+        for(int i = 0; i < distanceMatrix.size(); i++) {
+            for(int j = 0; j < distanceMatrix.get(i).size(); j++) {
+                distanceMatrice[i][j] = distanceMatrix.get(i).get(j);
+            }
+        }
 
 
-    public List<List<GeographicPoint2d>> findRoutesBFS(
-            List<GeographicPoint2d> stops,
+        int desiredNumberOfServicesPerVehicle = numberOfStops;
+        int STOP_COUNT_DIMENSION_INDEX = 0;
+
+        VehicleTypeImpl.Builder vehicleTypeBuilder = VehicleTypeImpl.Builder.newInstance("vehicleType");
+        vehicleTypeBuilder.addCapacityDimension(STOP_COUNT_DIMENSION_INDEX, desiredNumberOfServicesPerVehicle);
+        VehicleTypeImpl vehicleType = vehicleTypeBuilder.build();
+
+        VehicleImpl.Builder vehicleBuilder = VehicleImpl.Builder.newInstance("vehicle");
+
+        Location start = Location.newInstance("0");
+        vehicleBuilder.setStartLocation(start);
+
+        if(stopDefined) {
+            Location end = Location.newInstance(String.valueOf(distanceMatrice.length -1));
+            vehicleBuilder.setEndLocation(end).setReturnToDepot(true);
+        }
+
+        vehicleBuilder.setType(vehicleType).setReturnToDepot(false);
+
+
+
+        VehicleRoutingProblem.Builder vrpBuilder = VehicleRoutingProblem.Builder.newInstance();
+        vrpBuilder.addVehicle(vehicleBuilder.build());
+
+        // Add all service locations (except depot)
+        for (int i = 1; i < distanceMatrix.size() - 1; i++) { // Assuming 0 is start, N-1 is end
+            vrpBuilder.addJob(com.graphhopper.jsprit.core.problem.job.Service.Builder.newInstance("stop_" + i)
+                    .setLocation(Location.newInstance(String.valueOf(i)))
+                    // Assign a demand of 1 for our STOP_COUNT_DIMENSION_INDEX
+                    .addSizeDimension(STOP_COUNT_DIMENSION_INDEX, 1)
+                    .build());
+        }
+
+        // Use your own distance matrix
+        vrpBuilder.setFleetSize(VehicleRoutingProblem.FleetSize.FINITE);
+        vrpBuilder.setRoutingCost(new CustomMatrixCost(distanceMatrice));
+        VehicleRoutingProblem problem = vrpBuilder.build();
+
+        // Solve
+        VehicleRoutingAlgorithm algorithm = Jsprit.createAlgorithm(problem);
+        Collection<VehicleRoutingProblemSolution> solutions = algorithm.searchSolutions();
+
+        List<List<Integer>> possibleRoutes = new ArrayList<>();
+
+        for (VehicleRoutingProblemSolution solution : solutions) {
+            //Filter best routes
+            List<List<Integer>> paths = new ArrayList<>();
+            for (VehicleRoute route: solution.getRoutes()){
+                List<Integer> routeDetail = new ArrayList<>();
+                routeDetail.add(Integer.valueOf(route.getStart().getLocation().getId()));
+                routeDetail.addAll(route.getActivities().stream().map(tourActivity -> Integer.parseInt(tourActivity.getLocation().getId())).toList());
+                double tourCost = getTotalPriceForTour(routeDetail, stops, building_dict, dto);
+                double tourDistance = getTourDistance(routeDetail, distanceMatrix);
+                logger.info("Calculated tour cost for tour:{}", tourCost);
+                logger.info("Calculated tour distance for tour:{}", tourDistance);
+                logger.info("Max tour distance for tour:{}", maxDistance);
+                if (tourCost > maxBudget){
+                    continue;
+                }
+                if (tourDistance > maxDistance){
+                    continue;
+                }
+                paths.add(routeDetail);
+            }
+            possibleRoutes.addAll(paths);
+        }
+        logger.info("Found routes with Graphhopper: {}", possibleRoutes.size());
+        if(possibleRoutes.isEmpty()){
+            return List.of();
+        } else{
+            return possibleRoutes.get(0);
+        }
+    }
+
+    private double getTotalPriceForTour(List<Integer> path, List<GeographicPoint2d> stops, Map<GeographicPoint2d, Integer> building_dict, CreateTourRequestDTO dto) {
+        List<Integer> pathBuildingIds = path.stream().map(index -> building_dict.get(stops.get(index))).toList();
+        Map<Integer, List<PriceDTO>> pricePerStop = getPriceFromDB(pathBuildingIds);
+        double currentPrice = 0;
+
+        for (Integer stopId : path) {
+            List<PriceDTO> pricesForLocation = pricePerStop.get(stopId);
+            if (pricesForLocation != null) {
+                Optional<PriceDTO> adultPriceDTO = pricesForLocation.stream().filter(priceDto -> "Adult".equals(priceDto.getName())).findFirst();
+                Optional<PriceDTO> childPriceDTO = pricesForLocation.stream().filter(priceDto -> "Child".equals(priceDto.getName())).findFirst();
+                Optional<PriceDTO> seniorPriceDTO = pricesForLocation.stream().filter(priceDto -> "Senior".equals(priceDto.getName())).findFirst();
+
+                if (adultPriceDTO.isPresent()) {
+                    currentPrice += dto.getPersonConfiguration()[0] * adultPriceDTO.get().getPrice();
+                }
+                if (childPriceDTO.isPresent()) {
+                    currentPrice += dto.getPersonConfiguration()[1] * childPriceDTO.get().getPrice();
+                }
+                if (seniorPriceDTO.isPresent()) {
+                    currentPrice += dto.getPersonConfiguration()[2] * seniorPriceDTO.get().getPrice();
+                }
+            }
+        }
+
+        return currentPrice;
+    }
+
+    private Map<Integer, List<PriceDTO>> getPricePerStop(List<Integer> path, List<GeographicPoint2d> stops, Map<GeographicPoint2d, Integer> building_dict, CreateTourRequestDTO dto) {
+        List<Integer> pathBuildingIds = path.stream().map(index -> building_dict.get(stops.get(index))).toList();
+        Map<Integer, List<PriceDTO>> pricePerStop = getPriceFromDB(pathBuildingIds);
+        Map<Integer, List<PriceDTO>> filteredPricePerStop = new HashMap<>();
+
+        for (Integer stopId : path) {
+            List<PriceDTO> pricesForLocation = pricePerStop.get(stopId);
+            if (pricesForLocation != null) {
+                Optional<PriceDTO> adultPriceDTO = pricesForLocation.stream().filter(priceDto -> "Adult".equals(priceDto.getName())).findFirst();
+                Optional<PriceDTO> childPriceDTO = pricesForLocation.stream().filter(priceDto -> "Child".equals(priceDto.getName())).findFirst();
+                Optional<PriceDTO> seniorPriceDTO = pricesForLocation.stream().filter(priceDto -> "Senior".equals(priceDto.getName())).findFirst();
+
+                List<PriceDTO> prices = new ArrayList<>();
+
+                adultPriceDTO.ifPresent(prices::add);
+                childPriceDTO.ifPresent(prices::add);
+                seniorPriceDTO.ifPresent(prices::add);
+                filteredPricePerStop.put(stopId, prices);
+            }
+        }
+        return filteredPricePerStop;
+    }
+
+
+    private double getTourDistance(List<Integer> stops, List<List<Float>> distanceMatrix){
+        double totalCost = 0;
+        for (int i = 0; i < stops.size() - 1; i++) {
+            totalCost += distanceMatrix.get(stops.get(i)).get(stops.get(i + 1));
+        }
+        return totalCost;
+    }
+
+
+    public List<TourObject> findRoutesBFS(
+            Optional<GeographicPoint2d> startOptional,
+            Optional<GeographicPoint2d> endOptional,
+            List<GeographicPoint2d> mandatoryStops,
+            List<GeographicPoint2d> availableStops,
             List<List<Float>> distanceMatrix,
-            double minDistance,
-            double maxDistance,
-            int minIntermediateStops,
-            int maxRoutes
+            CreateTourRequestDTO createTourRequestDTO,
+            int maxRoutes,
+            Map<GeographicPoint2d, Integer> building_dict
     ) {
-        int N = stops.size();
-        int startIdx = 0;
-        int endIdx = N - 1;
+        List<GeographicPoint2d> allStops = new ArrayList<>();
 
-        List<List<GeographicPoint2d>> validRoutes = new ArrayList<>();
+        startOptional.ifPresent(s -> {
+            if (!allStops.contains(s)) allStops.add(s);
+        });
+        endOptional.ifPresent(e -> {
+            if (!allStops.contains(e)) allStops.add(e);
+        });
 
+        for (GeographicPoint2d stop : mandatoryStops) {
+            if (!allStops.contains(stop)) allStops.add(stop);
+        }
+
+        for (GeographicPoint2d stop : availableStops) {
+            if (!allStops.contains(stop)) allStops.add(stop);
+        }
+
+        int N = allStops.size();
+
+        int startIdx;
+        int endIdx;
+
+        if (startOptional.isPresent()) {
+            startIdx = allStops.indexOf(startOptional.get());
+            if (startIdx == -1) {
+                throw new RuntimeException("Could not find start point: " + startOptional.get() + " in allStops");
+            }
+        } else {
+            // If no explicit start, assume first stop in allStops as start
+            startIdx = 0;
+        }
+
+        if (endOptional.isPresent()) {
+            endIdx = allStops.indexOf(endOptional.get());
+            if (endIdx == -1) {
+                throw new RuntimeException("Could not find end point: " + endOptional.get() + " in allStops");
+            }
+        } else {
+            endIdx = N - 1;
+        }
+
+
+        List<TourObject> validRoutes = new ArrayList<>();
         Queue<RouteState> queue = new LinkedList<>();
 
         List<Integer> initialPath = new ArrayList<>();
         initialPath.add(startIdx);
 
-        queue.add(new RouteState(initialPath, 0.0));
+        Set<Integer> visitedMandatoryStops = new HashSet<>();
+        for (int i = 0; i < mandatoryStops.size(); i++) {
+            int mandatoryIdx = allStops.indexOf(mandatoryStops.get(i));
+            if (initialPath.contains(mandatoryIdx)) {
+                visitedMandatoryStops.add(mandatoryIdx);
+            }
+        }
+
+        queue.add(new RouteState(initialPath, 0.0, visitedMandatoryStops));
 
         while (!queue.isEmpty()) {
             if (validRoutes.size() >= maxRoutes) break;
@@ -179,45 +403,87 @@ public class TourService implements ITourService {
             RouteState state = queue.poll();
             List<Integer> path = state.path;
             double currentDistance = state.distance;
+            Set<Integer> currentVisitedMandatoryStops = state.visitedMandatoryStops;
 
-            int currentStop = path.get(path.size() - 1);
+            int currentStopIdx = path.get(path.size() - 1);
 
-            if (currentStop == endIdx) {
-                int intermediateStops = path.size() - 2; // exclude start and end
+            if (path.size() > createTourRequestDTO.getNumStops() + 2) {
+                continue; // Prune paths that are already too long
+            }
 
-                if (intermediateStops >= minIntermediateStops &&
-                        currentDistance >= minDistance &&
-                        currentDistance <= maxDistance) {
 
-                    // Convert path of indices to path of GeographicPoint2d
-                    List<GeographicPoint2d> route = new ArrayList<>();
-                    for (Integer idx : path) {
-                        route.add(stops.get(idx));
+            //Handle tours that reach the endIdx
+            if (currentStopIdx == endIdx) {
+                int intermediateStopsCount = path.size() - 2;
+
+                boolean allMandatoryStopsVisited = true;
+                for (GeographicPoint2d mandatoryStop : mandatoryStops) {
+                    if (!path.contains(allStops.indexOf(mandatoryStop))) {
+                        allMandatoryStopsVisited = false;
+                        break;
                     }
-                    validRoutes.add(route);
                 }
 
-                continue;
+                if (allMandatoryStopsVisited &&
+                        intermediateStopsCount == createTourRequestDTO.getNumStops() &&
+                        currentDistance >= createTourRequestDTO.getMinDistance() &&
+                        currentDistance <= createTourRequestDTO.getMaxDistance()
+                ) {
+                    double currentPrice = getTotalPriceForTour(path, allStops, building_dict, createTourRequestDTO);
+
+                    if (currentPrice <= createTourRequestDTO.getMaxBudget()) {
+                        List<GeographicPoint2d> routeGeographicPoints = path.stream()
+                                .map(allStops::get)
+                                .collect(Collectors.toList());
+
+                        Map<Integer, List<PriceDTO>> pricePerStop = getPricePerStop(path, allStops, building_dict, createTourRequestDTO);
+
+                        validRoutes.add(buildTourObject(routeGeographicPoints, createTourRequestDTO.getUserId(), building_dict, currentPrice, pricePerStop));
+                    }
+                }
+                continue; // Continue to next state in queue after processing a complete path
             }
 
-            for (int nextStop = 0; nextStop < N; nextStop++) {
-                if (nextStop == startIdx && path.size() > 1) continue;
+            for (int nextStopIdx = 0; nextStopIdx < N; nextStopIdx++) {
+                if (path.contains(nextStopIdx)) continue;
 
-                if (path.contains(nextStop)) continue;
+                if (path.size() + 1 > createTourRequestDTO.getNumStops() + 2) {
+                    continue;
+                }
 
-                double nextDistance = distanceMatrix.get(currentStop).get(nextStop);
+                double nextDistance = distanceMatrix.get(currentStopIdx).get(nextStopIdx);
                 double newTotalDistance = currentDistance + nextDistance;
 
-                if (newTotalDistance > maxDistance) continue;
+                if (newTotalDistance > createTourRequestDTO.getMaxDistance()) {
+                    continue;
+                }
 
                 List<Integer> newPath = new ArrayList<>(path);
-                newPath.add(nextStop);
+                newPath.add(nextStopIdx);
 
-                queue.add(new RouteState(newPath, newTotalDistance));
+                Set<Integer> newVisitedMandatoryStops = new HashSet<>(currentVisitedMandatoryStops);
+                for (GeographicPoint2d mandatoryStop : mandatoryStops) {
+                    if (allStops.get(nextStopIdx).equals(mandatoryStop)) {
+                        newVisitedMandatoryStops.add(nextStopIdx);
+                    }
+                }
+
+                queue.add(new RouteState(newPath, newTotalDistance, newVisitedMandatoryStops));
             }
         }
-
         return validRoutes;
+    }
+
+    private static class RouteState {
+        List<Integer> path;
+        double distance;
+        Set<Integer> visitedMandatoryStops; // Indices of mandatory stops visited in this path
+
+        public RouteState(List<Integer> path, double distance, Set<Integer> visitedMandatoryStops) {
+            this.path = path;
+            this.distance = distance;
+            this.visitedMandatoryStops = visitedMandatoryStops;
+        }
     }
 
     private List<List<Float>> getMetricMatrix(List<GeographicPoint2d> coordinates, String metric) {
@@ -234,10 +500,11 @@ public class TourService implements ITourService {
 
         HttpEntity<Map<String, Object>> request = new HttpEntity<>(payload, headers);
         RestTemplate restTemplate = new RestTemplate();
-        ResponseEntity<String> response = restTemplate.postForEntity(url, request, String.class);
-
-        if (!response.getStatusCode().is2xxSuccessful()) {
-            System.out.println("Error: " + response.getBody());
+        ResponseEntity<String> response;
+        try{
+            response = restTemplate.postForEntity(url, request, String.class);
+        } catch (RestClientException e) {
+            logger.info("Error fetching metric matrix from OpenRouteService: {}", e.getMessage());
             return null;
         }
 
@@ -246,11 +513,8 @@ public class TourService implements ITourService {
             JsonNode durations = root.path("durations");
             JsonNode distances = root.path("distances");
 
-            System.out.println(durations);
-            System.out.println(distances);
-
-            List<List<Float>> distanceArray = mapper.convertValue(distances, new TypeReference<List<List<Float>>>() {});
-            List<List<Float>> durationArray = mapper.convertValue(durations, new TypeReference<List<List<Float>>>() {});
+            List<List<Float>> distanceArray = mapper.convertValue(distances, new TypeReference<>() {});
+            List<List<Float>> durationArray = mapper.convertValue(durations, new TypeReference<>() {});
 
             switch (metric) {
                 case "distance":
@@ -258,41 +522,41 @@ public class TourService implements ITourService {
                 case "duration":
                     return durationArray;
                 default:
-                    System.out.println("Invalid metric: " + metric);
+                    logger.error("Invalid metric: {}", metric);
             }
 
         } catch (JsonProcessingException e) {
-            System.out.println("Could not parse directions response.");
+            logger.error("Could not parse directions response.");
             return null;
         }
 
         return null;
     }
 
-    private List<String> getInterestsFromDB(String userId) {
-        HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
-        headers.add("user-agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.99 Safari/537.36");
-        HttpEntity<String> entity = new HttpEntity<>("parameters", headers);
-        ResponseEntity<List> response = restTemplate.exchange(USERDB_URL + "userInterests/user_id=" + userId, HttpMethod.GET, entity, List.class);
-        return response.getBody().stream().map(i ->((Map<String, Object>) i).get("interest_id").toString()).toList();
+    private List<Integer> getInterestsFromDB(String userId) {
+        return this.userDBClient.getUserInterestsIds(UUID.fromString(userId));
     }
 
-    private List<Integer> getEntititesFromQdrant(List<String> interestsIds, String collectionName) {
-        HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
-        headers.add("user-agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.99 Safari/537.36");
+    private Map<Integer, List<PriceDTO>> getPriceFromDB(List<Integer> location_ids) {
+        List<PriceDTO> prices = this.userDBClient.getPricesFromDB(location_ids);
+        if(prices.isEmpty()) {
+         logger.error("Could not retrieve prices from User DB! Either there are no prices available, or there was an issue with the DB connection.");
+        }
+        Map<Integer, List<PriceDTO>> priceMap = new HashMap<>();
+        for(Integer location_id : prices.stream().map(PriceDTO::getLocationId).distinct().toList()) {
+            List<PriceDTO> pricesToLocation = prices.stream().filter(priceDTO -> priceDTO.getLocationId() == location_id).toList();
+            priceMap.put(location_id, pricesToLocation);
+        }
 
+        return priceMap;
+    }
+
+    private List<Integer> getBuildingEntititesFromQdrant(List<String> interestsIds) {
         MatchRequest dto = new MatchRequest();
-        dto.setCollectionName(collectionName);
+        dto.setCollectionName("WienGeschichteWikiBuildings");
         dto.setInterests(interestsIds);
-        dto.setResultSize(10);
-
-        System.out.println(dto);
-
-        HttpEntity<MatchRequest> entity = new HttpEntity<>(dto, headers);
-        ResponseEntity<List> response = restTemplate.exchange(QDRANT_URL + "categorize/match", HttpMethod.POST, entity, List.class);
-        return response.getBody();
+        dto.setResultSize(MAX_NEARBY_BUILDINGS);
+        return qdrantClient.getBuildingEntityIdsFromQdrant(dto);
     }
 
     @Override
@@ -337,7 +601,7 @@ public class TourService implements ITourService {
         ResponseEntity<String> response = restTemplate.postForEntity(url, request, String.class);
 
         if (!response.getStatusCode().is2xxSuccessful()) {
-            System.out.println("Error: " + response.getBody());
+            logger.error("Error accessing OpenRoutingService for distance calculations: {}", response.getBody());
             return null;
         }
 
@@ -345,25 +609,15 @@ public class TourService implements ITourService {
             JsonNode root = mapper.readTree(response.getBody());
             JsonNode summary = root.path("routes").get(0).path("summary");
 
-            Double distance = summary.path("distance").asDouble();
-            Double duration = summary.path("duration").asDouble();
+            double distance = summary.path("distance").asDouble();
+            double duration = summary.path("duration").asDouble();
 
             return Map.of("distance", distance/1000, "duration", duration/3600);
 
         } catch (JsonProcessingException e) {
-            System.out.println("Could not parse directions response.");
+            logger.error("Could not parse ORS directions response.");
             return null;
         }
 
-    }
-
-    private static class RouteState {
-        List<Integer> path;
-        double distance;
-
-        RouteState(List<Integer> path, double distance) {
-            this.path = path;
-            this.distance = distance;
-        }
     }
 }
